MTM6201/midterm/css/style.css
/* ... */
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* ------------------------------------------- CUSTOM STYLES---------------------------------------------------- */

.container {
    margin: 0 auto;
    padding: 0px 114px;
}

/* text styling */
body {
    font-family: 'Work Sans', sans-serif ;
    background-color: blue;
}


h1 {
    font-weight: 900;
    font-size: 60px;
    color: white;
}

p {
    font-weight: 500;
    font-size: 20px;
    color: white;
    text-align: justify;
}

a {
    font-weight: 300;
    font-style: italic;
    font-size: 24px;
    color: black;
}

/* ----------------------nav------------------------------ */

.navbar {
    border-bottom: black 2px solid;
    height: 100px;
}

#nav{
    display: grid;
    grid-template-columns: repeat(12, 1fr) ;
    column-gap: 16px ;
    align-items: center;
    height: 100px;
}

#nav > li {
    text-align: center;
}

/* Aligning all nav items to the grid */
#logo {
    grid-column: 1 / 6;
}

/* fixing issue where the logo causes the nav bar to go out of bounds */
#logo-adjust {
    height: 5vw;
    max-height: 90px;
}

#nav-item-1 {
    grid-column: 7 / 9;
}

#nav-item-2 {
    grid-column: 9 / 11;
}

#nav-item-3 {
    grid-column: 11 / 13;
}


/* hover animation */

li > a:hover {
    color:white;
    transition-duration: .1s;
}

/* current page styling and alignment */
.current-page {
    border: white 2px solid;
    height: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column ;
}

.current-page a {
    color: white;
    text-decoration: none;
}


/* --------------------------button styling-------------------------------- */

.button {
    text-align: center;
    width: calc(100% - 4px);
    border: 2px white solid;
    color: white;
    padding: 36px 0px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin-top: 1em;
}

input.button {
    background-color: blue;
}

.button:hover {
    background-color: rgba(0, 0, 0, .32);
    transition: 0.2s;
}

/* -------------------------- landing area---------------------------------------- */

/* landing area making it the right size and grid */

.landing-area {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    height: calc(100vh - 101px);    
    position: relative;
    top: 200px;
}

.landing-img {
    grid-column-start: 1 ;
    grid-column-end: 7;
    grid-row: 1;
    display: grid;
    grid-template-columns: 1fr 1fr minmax(350px, 350px) minmax(350px, 350px) 1fr 1fr; /* minmax used to make the center image always square and the specified size*/
    position: relative;
    height: 650px;
    z-index: -2;
}

/* setting image height and position for all images in stack */
.size {
    height: 650px;
    grid-row: 1;
    justify-self: center ;
    width: 100%;
}

#landing-layer-3 {
    grid-column-start: 3;
    grid-column-end: 5;
}

#landing-layer-2 {
    grid-column-start: 2 ;
    grid-column-end: 6;
}

#landing-layer-1 {
    grid-column-start: 1 ;
    grid-column-end: 7;
}

/* rotating image  */

.rotate {
    animation: rotation 120s infinite linear;
    position: relative;
    bottom: 100px;
    grid-column-start: 2 ;
    grid-column-end: 6;
    grid-row-start: 1;
    grid-row-end: 2;
    z-index: -1;
}

@keyframes rotation {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(-360deg);
    }
}


/* -------------barcode---------------------------- */

.barcode {
    font-family: 'Libre Barcode EAN13 Text', none;
    font-size: 400px;
    margin: -22px;
    padding: -22px;
    color: black;
}

.barcode-box {
    height: 100px;
    border: 1px black solid;
    overflow: hidden; /*IMPORTANT TAG WOW I DIDNT KNOW THIS EXISTED  */
    background-color: white;
}

/* ----------------------------- body images hell---------------------------- */

.section-1-background,
.section-2-background,
.section-3-background {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 1fr calc(100vw - 228px) 1fr 1fr ;
    grid-template-rows: 1fr 1fr calc(100vh - 156px) 1fr 1fr ;
}

.section-size {
    position:relative;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.section-1-img-1,
.section-2-img-1,
.section-3-img-1 {
    grid-column-start: 1;
    grid-column-end: 6;
    grid-row-start: 1;
    grid-row-end: 6;
}

.section-1-img-2,
.section-2-img-2,
.section-3-img-2 {
    grid-column-start: 2;
    grid-column-end: 5;
    grid-row-start: 2;
    grid-row-end: 5;
}

.section-1-img-3,
.section-2-img-3,
.section-3-img-3 {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 3;
    grid-row-end: 4;
}

/* -----------------------getting text over the image----------------------------- */
.section-text {
    display: grid;
    grid-template-rows: repeat(1, 2fr);

}

.section-text > * {
    grid-row: 1 / 3;
    grid-column: 1 ;
    height: 100%;
    position: relative;;
}


/* -----------------------------------------------------Body Text sections--------------------------------- */

.body{
    display: grid;
    grid-template-columns: repeat(12, 1fr) ;
    column-gap: 16px ;
    align-items: center;
}

.header{
    grid-column: 1 / 6
}

.body-text {
    grid-column: 6 / 13;
}

.contact-form {
    grid-column: 7 / 13;
}

/* used for animation later */
.landing-body {
    opacity: 0;
}

.landing-body > .header {
    grid-column: 2 / 7;
}

.landing-body > .body-text {
    grid-column: 7 / 12;
}

/* section 2 header spacing, as well as contact section header spacing */

.section-2-img-3 > div > div > h1 {
    line-height: 2em;
}

.contact > .header > h1 {
    padding-bottom: 1em;
}
/* ... */

